--- a/client/src/app/components/instrument/instrument-list-sideinfo/instrument-list-sideinfo.component.html
+++ b/client/src/app/components/instrument/instrument-list-sideinfo/instrument-list-sideinfo.component.html
@@ -13,16 +13,16 @@
 				<div class="sideinfo-section-data-key flex-item" fxFlex="96px">
 					Date Created
 				</div>
-				<div class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
-					{{DateTimeUtils.getDate(instrument.createdDate)}}
+				<div *ngIf="instrument.createdDate" class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
+					{{DateTimeUtils.getDate(instrument.createdDate)}} {{DateTimeUtils.getTime(instrument.createdDate)}}
 				</div>
 			</div>
 			<div class="sideinfo-section-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
 				<div class="sideinfo-section-data-key flex-item" fxFlex="96px">
 					Last Modified
 				</div>
-				<div class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
-					{{DateTimeUtils.getDate(instrument.modifiedDate)}}
+				<div *ngIf="instrument.modifiedDate" class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
+					{{DateTimeUtils.getDate(instrument.modifiedDate)}} {{DateTimeUtils.getTime(instrument.modifiedDate)}}
 				</div>
 			</div>
 		</div>
