--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -17,17 +17,36 @@
 	margin: 2px;
 	height: 280px;
 	outline: none;
+	cursor: pointer;
 	pointer-events: all;
+	transition: all 0.1s ease-in-out;
+	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12); // mat-elevation-z0
+}
+
+.dashboard-grid-item:hover {
+	transform: translate(-1px, -1px);
+	box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 5px 8px 0px rgba(0, 0, 0, 0.14), 0px 1px 14px 0px rgba(0, 0, 0, 0.12); // mat-elevation-z5
+}
+
+.dashboard-grid-item-disabled {
+	cursor: default;
+	transform: translate(0, 0) !important;
+	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2), 0px 0px 0px 0px rgba(0, 0, 0, 0.14), 0px 0px 0px 0px rgba(0, 0, 0, 0.12) !important; // mat-elevation-z0
 }
 
 .dashboard-grid-item-img {
 	width: 100%;
 	height: 100%;
+	md-icon {
+		padding: 16px;
+		font-size: 248px;
+		color: rgba(255, 255, 255, 0.54);
+	}
 }
 
 .dashboard-grid-item-text-area {
 	position: relative;
-	bottom: 72px;
+	bottom: 68px;
 	width: calc(100% - 32px);
 	padding: 16px;
 	background: rgba(0,0,0,0.54);
