--- a/client/src/app/components/instrument/instrument-list/instrument-list.component.html
+++ b/client/src/app/components/instrument/instrument-list/instrument-list.component.html
@@ -1,5 +1,5 @@
 <div style="height:calc(100% - 121px);"> <!-- Browser dependent. Test on multiple browserGroups before setting this value. -->
-	<app-page-loading-indicator *ngIf="!(isDataLoaded && isInstrumentTypesLoaded)" [message]="loadingMessage"></app-page-loading-indicator>
+	<app-page-loading-indicator *ngIf="!(isDataLoaded || !isInstrumentTypesLoaded)" [message]="loadingMessage"></app-page-loading-indicator>
 	<div *ngIf="isDataLoaded && isInstrumentTypesLoaded" class="data-table-scrollable">
 		<div class="data-table-filter-container-row flex-container" fxLayout="row" fxLayoutAlign="end center">
 			<div *ngIf="showFilters" class="data-table-filter-container flex-item flex-container" fxFlex fxLayout="row" fxLayoutAlign="end center">
@@ -24,7 +24,8 @@
 			</div>
 			<button md-icon-button 
 				(click)="toggleFilters()" 
-				class="flex-item" 
+				class="toggle-icon-button flex-item"
+				[ngClass]="{'toggle-icon-button-active': showFilters}"
 				fxFlex="40px"
 				mdTooltip="Filter" 
 				mdTooltipPosition="below">
