--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -1,6 +1,6 @@
 <div style="height:calc(100% - 121px);"> <!-- Browser dependent. Test on multiple browsers before setting this value. -->
-	<app-page-loading-indicator *ngIf="!isDataLoaded" [message]="loadingMessage"></app-page-loading-indicator>
-	<div *ngIf="isDataLoaded" class="data-table-scrollable">
+	<app-page-loading-indicator *ngIf="!isDataLoaded || !isUserGroupsLoaded" [message]="loadingMessage"></app-page-loading-indicator>
+	<div *ngIf="isDataLoaded && isUserGroupsLoaded" class="data-table-scrollable">
 		<div class="data-table-filter-container-row flex-container" fxLayout="row" fxLayoutAlign="end center">
 			<div *ngIf="showFilters" class="data-table-filter-container flex-item flex-container" fxFlex fxLayout="row" fxLayoutAlign="end center">
 				<div class="flex-item" fxFlex="152px"></div>
@@ -89,12 +89,13 @@
 				<div class="data-table-row-content flex-container" 
 					fxLayout="row" 
 					(click)="selectUser(user)"
-					(dblclick)="navigateToUser(user)"
+					(dblclick)="openUserDialog(user)"
 					[ngClass]="{'data-table-row-content-active': user === selectedUser}">
 					<div class="data-table-first-column truncate flex-item" fxFlex="10">
-						<a [routerLink]="user.username">
+						<a *ngIf="canEdit" (click)="openUserDialog(user)">
 							{{user.username}}
 						</a>
+						<div *ngIf="!canEdit">{{user.username}}</div>
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex="13">
 						{{StringUtils.formatUserName(user)}}
