changed data sync pictures

--- a/client/src/app/components/instrument/instrument-list-sideinfo/instrument-list-sideinfo.component.html
+++ b/client/src/app/components/instrument/instrument-list-sideinfo/instrument-list-sideinfo.component.html
@@ -101,7 +101,7 @@
 					Assigned Site
 				</div>
 				<div class="sideinfo-section-data-value truncate flex-item" fxFlex="160px">
-					{{instrument.site.name}}
+					{{instrument.site?.name}}
 				</div>
 			</div>
 			<div class="sideinfo-section-data-row flex-container" fxLayout="row" fxLayoutAlign="start center">
