cleaned up components

--- a/client/src/app/components/exceedance/ime-number/ime-number.component.html
+++ b/client/src/app/components/exceedance/ime-number/ime-number.component.html
@@ -27,7 +27,7 @@
 					<md-spinner class="loading-indicator-spinner"></md-spinner>
 					<div class="loading-indicator-message">Loading...</div>
 				</div>
-				<app-ime-data-view [data]="imeNumberData.imeData" [edit]="true"></app-ime-data-view>
+				<!--<app-ime-data-view [data]="imeNumberData.imeData" [edit]="true"></app-ime-data-view>-->
 			</md-card-content>
 		</md-card>
 	</div>
