--- a/client/src/app/components/instrument/instrument-type-list-sideinfo/instrument-type-list-sideinfo.component.html
+++ b/client/src/app/components/instrument/instrument-type-list-sideinfo/instrument-type-list-sideinfo.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="!instrumentType">
-	<div style="padding:16px;">
-		Select an equipment type to view its details.
+	<div class="sideinfo-not-selected">
+		<md-icon>pageview</md-icon>
+		<div>Select an equipment type to view its details.</div>
 	</div>
 </div>
 <div *ngIf="instrumentType" style="height:calc(100% - 128px);">
