--- a/client/src/app/components/unverified-data/unverified-data-set-list-sideinfo/unverified-data-set-list-sideinfo.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set-list-sideinfo/unverified-data-set-list-sideinfo.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="!unverifiedDataSet">
-	<div style="padding:16px;">
-		Select a user group to view its details.
+	<div class="sideinfo-not-selected">
+		<md-icon>pageview</md-icon>
+		<div>Select an unverified data set to view its details.</div>
 	</div>
 </div>
 <div *ngIf="unverifiedDataSet" style="height:calc(100% - 128px);">
