--- a/client/src/app/components/user/user-group-list-sideinfo/user-group-list-sideinfo.component.html
+++ b/client/src/app/components/user/user-group-list-sideinfo/user-group-list-sideinfo.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="!userGroup">
-	<div style="padding:16px;">
-		Select a user group to view its details.
+	<div class="sideinfo-not-selected">
+		<md-icon>pageview</md-icon>
+		<div>Select a user group to view its details.</div>
 	</div>
 </div>
 <div *ngIf="userGroup" style="height:calc(100% - 128px);">
