--- a/client/src/app/components/exceedance/ise-number-list/ise-number-list.component.html
+++ b/client/src/app/components/exceedance/ise-number-list/ise-number-list.component.html
@@ -11,15 +11,16 @@
 					[ngClass]="{'mat-input-container-error':!textFilterStatus.valid}">
 					<input mdInput placeholder="Search" [(ngModel)]="filters.text" (ngModelChange)="applyFilters()">
 				</md-input-container>
-				<md-select [(ngModel)]="filters.status" placeholder="Status" class="mat-select-inline flex-item" fxFlex="150px" (ngModelChange)="applyFilters()">
-					<!--<md-option *ngFor="let status of statusFilterChoices" [value]="status.value">
-						{{status.label}}
-					</md-option>-->
+				<md-select [(ngModel)]="filters.site" placeholder="Site" class="mat-select-inline flex-item" fxFlex="150px" (ngModelChange)="applyFilters()">
+					<md-option *ngFor="let site of siteFilterChoices" [value]="site.ordinal">
+						{{site.name}}
+					</md-option>
 				</md-select>
 			</div>
 			<button md-icon-button 
 				(click)="toggleFilters()" 
-				class="flex-item" 
+				class="toggle-icon-button flex-item"
+				[ngClass]="{'toggle-icon-button-active': showFilters}"
 				fxFlex="40px"
 				mdTooltip="Filter" 
 				mdTooltipPosition="below">
@@ -46,7 +47,7 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex style="text-align:center;">
+			<div class="data-table-column truncate flex-item" fxFlex>
 				<span class="data-table-header-label">Site</span>
 			</div>
 			<div class="data-table-column truncate flex-item" fxFlex (click)="sortBy('monitoringPoint')">
@@ -82,10 +83,10 @@
 					arrow_downward
 				</md-icon>
 			</div>
-			<div class="data-table-column truncate flex-item" fxFlex style="text-align:center;">
+			<div class="data-table-column truncate flex-item" fxFlex>
 				<span class="data-table-header-label">Latest Reading</span>
 			</div>
-			<div class="data-table-last-column truncate flex-item" fxFlex style="text-align:center;">
+			<div class="data-table-last-column truncate flex-item" fxFlex>
 				<span class="data-table-header-label">Status</span>
 			</div>
 		</div>
@@ -102,10 +103,10 @@
 						</a>
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex>
-						{{iseNumber.site}}
+						{{iseNumber.site.name}}
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex>
-						{{iseNumber.monitoringPoint}}
+						{{iseNumber.monitoringPoint.name}}
 					</div>
 					<div class="data-table-column truncate flex-item" fxFlex>
 						{{iseNumber.iseData && iseNumber.iseData[0] ? DateTimeUtils.getDate(iseNumber.iseData[0].dateTime) : ''}}
@@ -117,7 +118,7 @@
 						{{iseNumber.iseData ? iseNumber.iseData[iseNumber.iseData.length - 1].methaneLevel : ''}}
 					</div>
 					<div class="data-table-last-column truncate flex-item" fxFlex>
-						{{iseNumber.status}}
+						{{iseNumber.status.name}}
 					</div>
 				</div>
 			</div>
