--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -26,6 +26,10 @@ a {
 	color: mat-color($app-primary);
 }
 
+.grey-background {
+	background: #EEE;
+}
+
 .mat-sidenav-content {
   transform: initial !important;
   overflow: hidden;
@@ -211,6 +215,12 @@ md-toolbar-row {
 	}
 }
 
+.md-tab-header-white {
+	md-tab-header {
+		background: #FFF;
+	}
+}
+
 .md-input-full-width {
 	width: 100%;
 }
@@ -288,11 +298,36 @@ md-toolbar-row {
 	padding: 16px 24px 24px 24px;
 }
 
+.card-title {
+	font-size: 20px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.87);
+	padding-bottom: 16px;
+}
+
 .dialog-form-container {
 	padding: 0 8px;
 	textarea {
 		resize: none;
 	}
+}
+
+.data-table-card {
+	padding: 0 !important;
+}
+
+.data-table-card-footer {
+	padding: 0 24px;
+	height: 56px;
+	border-top: 1px solid rgba(0,0,0,0.12);
+}
+
+.data-table-card-title-row {
+	font-size: 20px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.87);
+    height: 16px;
+    padding: 24px;
 }
 
 .data-table-scrollable {
@@ -370,6 +405,19 @@ md-toolbar-row {
 	transform: rotate(-90deg);
 }
 
+.data-table-checkbox-column {
+    padding: 14px 24px 0 24px;
+    margin-top: -16px;
+	pointer-events: all !important;
+	.mat-checkbox-inner-container {
+		cursor: pointer;
+	}
+}
+
+.data-table-checkbox-header {
+    padding-top: 18px !important;
+}
+
 .data-table-first-column {
 	margin-left: 24px;
 	margin-right: 28px;
@@ -383,6 +431,13 @@ md-toolbar-row {
 .data-table-last-column {
 	margin-left: 28px;
 	margin-right: 24px;
+}
+
+.data-table-action-column {
+	margin-left: 28px;
+	// Make the width of the element 64px, and the width of the corresponding header 40px.
+	padding-left: 12px;
+	margin-top: -12px;
 }
 
 .data-table-column-condensed {
@@ -428,6 +483,12 @@ md-toolbar-row {
 .data-table-icon-button {
 	margin-top: -4px;
 	cursor: pointer;
+}
+
+.data-table-no-data-label {
+	font-size: 16px;
+    padding: 24px;
+    text-align: center;
 }
 
 .toggle-icon-button {
@@ -535,3 +596,4 @@ $group-add-remove-button-width: 50px;
 	height: 32px;
 	padding-top: 2px;
 }
+
